DotNetProject_Team5_Armoire/wwwroot/css/site.css
/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
for details on configuring this project to bundle and minify static web assets. */

a.navbar-brand {
  white-space: normal;
  text-align: center;
  word-break: break-all;
}

/* Provide sufficient contrast against white background */
a {
  color: #0366d6;
}

.btn-primary {
  color: #fff;
  background-color: #1b6ec2;
  border-color: #1861ac;
}

.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
  color: #fff;
  background-color: #1b6ec2;
  border-color: #1861ac;
}

/* Sticky footer styles
-------------------------------------------------- */
html {
  font-size: 14px;
}
@media (min-width: 768px) {
  html {
    font-size: 16px;
  }
}

.border-top {
  border-top: 1px solid #e5e5e5;
}
.border-bottom {
  border-bottom: 1px solid #e5e5e5;
}

.box-shadow {
  box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
}

button.accept-policy {
  font-size: 1rem;
  line-height: inherit;
}

/* Sticky footer styles
-------------------------------------------------- */
html {
  position: relative;
  min-height: 100%;
}

body {
  /* Margin bottom by footer height */
  /*margin-bottom: 60px; */
}
.footer {
  position: absolute;
  bottom: 0;
  width: 100%;
  white-space: nowrap;
  line-height: 60px; /* Vertically center the text there */
}


/*  ------- INDEX -------- */

.landing {
    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("../images/hero-img-lg.jpg");
    background-size: cover;
    min-height: 100vh;
    padding: 2em;
}

.welcome-wrapper {
    text-align: center;
    color: white;
}

/*--------Login----------*/
.login-form {
    background: rgba(255,255,255,0.7);
}

.login-page {
    background: url("../images/login-lg.jpg");
    background-size: cover;
    min-height: 100vh;
}

a {
    color: #FFF;
}

    a:hover {
        text-decoration: none;
        color: #000;
    }

/*--------Register----------*/
.register-page {
    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("../images/register-lg.jpg");
    background-size: cover;
    min-height: 100vh;
}

.register-form {
    background-color: rgba(255, 255, 255,0.6);
}

/*Dashboard Table*/
.table-container {
    padding: 100px 100px;
} 

/*Add Item Styling*/
.add-item-container {
    padding: 100px 100px;
    max-width:200%
}
.add-item-flex-container {
    display: flex;
}
.image-container {
    padding-top: 100px;
}
.red-sweater {
    
}

